lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-lb-service
spec:
  type: LoadBalancer
  selector:
    app: devops-app
  ports:
    - port: 80
      targetPort: 80
